# wechat-articles

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Post-Training_RL_Infrastructure_Landscape_2026.md  README.md  ai_news.html  ai_topics.yaml  config.example.json  daily_digest_2026-04-20.md  daily_run.sh  fetch_arxiv_today.py  fetch_github_trending_today.py  fetch_hackernews_today.py  fetch_rss_today.py  fetch_wechat_today.py  generate_html.py  index.html  mp_article_preview.html  prompt_engineering_technical_depth.md  pyproject.toml  run.sh  schedule.yaml  today.html  大模型数据工程_横纵分析报告.html  大模型数据工程_横纵分析报告.md
.claude/: settings.json
api/: app.py  research_routes.py  routes.py
archive/: 2026-04-04.html  2026-04-06.html  2026-04-07.html  2026-04-08.html  2026-04-09.html  2026-04-10.html  2026-04-11.html  2026-04-12.html  2026-04-13.html  2026-04-14.html  2026-04-15.html  2026-04-16.html  2026-04-17.html  2026-04-18.html  2026-04-19.html  2026-04-20.html  2026-04-21.html  2026-04-22.html  2026-04-23.html  2026-04-24.html  2026-04-25.html  2026-04-26.html  2026-04-27.html  2026-04-28.html  2026-04-29.html  2026-04-30.html  2026-05-01.html  2026-05-02.html  2026-05-03.html  2026-05-05.html  2026-05-06.html  2026-05-07.html  2026-05-08.html  2026-05-09.html  2026-05-10.html  2026-05-11.html  2026-05-12.html  2026-05-13.html  2026-05-14.html  2026-05-15.html  (+204 more)
assets/: AI芯片格局_前置知识.html  AI芯片格局_前置知识.md  MoE前置知识.md  Transformer_前置知识.md  Transformer_推理部署横纵分析报告.md  Transformer_横纵分析报告.md  Transformer_训练前置知识.md  Transformer_训练横纵分析报告.md  diagram1_moe_layer.excalidraw  (+11 more)
(+412 files in other folders)
