[project]
name = "news1"
version = "0.1.0"
description = "AI 日报自动采集、去重、打标签、生成公众号文章"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "Pillow>=10.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.20",
]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: 需要真实 API 调用的集成测试，默认跳过",
]
addopts = ["-m", "not slow"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
